[package]
name = "lz-string-wasm-vn"
description = "LZ-String compression for WebAssembly "
version = "1.2.1"
edition = "2024"
repository = "https://github.com/ndtao2020/lz-string-wasm-vn"
authors = ["Nguyen Dinh Tao <ndtao2020@gmail.com>"]
license = "MIT License"
readme = "README.md"

[lib]
name = "lz_string_wasm_vn" # This must match your WASM filename
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1

[dependencies]
alloc_cat = "1"
wasm-bindgen = "0.2"

lz-str = { version = "0.2", default-features = false, features = [
    "rustc-hash",
] }
